# desafios-programando.org

./: .gitignore  README.md
2019-12-08/: hashes.txt
2019-12-08/brute-force-sha512/: Cargo.toml
2019-12-08/brute-force-sha512/src/: main.rs
2019-12-08/gen-sha512-list/: Cargo.toml
2019-12-08/gen-sha512-list/src/: main.rs
2019-12-08/solucion/: Cargo.toml
2019-12-15/: ciphers.txt
2019-12-15/primes-crypt/: Cargo.toml
2019-12-15/primes-crypt/src/: main.rs
2019-12-29/poker/: Cargo.toml
2020-01-05/poker-rust/: Cargo.toml
2020-01-05/poker-rust/cartas/: Cargo.toml
2020-01-05/poker-rust/cartas/src/: lib.rs
2020-01-05/poker-rust/cartas/tests/: cartas.rs
2020-01-26/capicuas/: Cargo.toml
2020-02-09/buscando-capicuas/: Cargo.toml
2020-02-09/contando-capicuas/: Cargo.toml
2020-07-20/: socket_client.py  socket_server.py
2020-07-31/a-rust-http-server/: 404.html  Cargo.toml  hola.html
2020-08-19/: navegador.go
2020-09-02/dns-server/: Cargo.toml  query_packet.txt  response_packet.txt
2020-09-02/py-dns-server/: Pipfile  dns_server.py  main.py
2020-12-12/gatos/: gatos.html
2021-02-10/: a.out  promedios  promedios_1
2021-02-13/: loader.c  loader2.c  loader3.c  notas.txt  p1.c  p2.c  p3.c  p4.c  promedios.c  promedios_v1.c  promedios_v2.c  promedios_v3.c  zombi.c
2021-02-20/: deadlock.c  pthread1.c  pthread2.c  pthread3.c  pthread4.c
2021-03-06/: dir.c  dir2.c  dir3.c
2021-04-04/: client_np.py  promedios.py  server_np.py
2021-04-24/: hello.sh
2021-06-28/: parse_l.py
2021-09-11/: counter.ts  hello.ts  server.js  server.ts
(+13 files in other folders)
