[package]
name = "primes-crypt"
version = "0.1.0"
authors = ["Eduardo Díaz <ediaz@dcc8090.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
num-traits = "0.2.10"
num-iter = "0.1.39"
itertools = "0.8.2"