[package]
name = "cartas"
version = "0.1.0"
authors = ["Eduardo Díaz <ediaz@dcc8090.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker = { path = "../../../2019-12-29/poker" }

colored = "1.9.1"
enum-iterator = "0.5.0"
rand = "0.7.2"
itertools = "0.8.2"
